--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #000000;
   }
   .line {
     width: 100vw;
