--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,46 @@
-body,html{
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	overflow: hidden; 
+* {
+    margin: 0;
+    padding: 0;
   }
-  body{
-	background-color: #141417;
-	display: flex;
-	justify-content: center;
-	align-items: center; 
+  body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #000000;
   }
-  svg{
-	height: auto;
-	width: auto;
-	
+  .line {
+    width: 100vw;
   }
+  .left, .right {
+    width: 50vw;
+    overflow: hidden;
+    display: inline-block;
+  }
+  .left {
+    color: darkred;
+    transform: skew(0deg, -15deg);
+  }
+  .right {
+    transform: skew(0deg, 15deg);
+    color: navajowhite;
+  }
+  .left .content {
+    width: 100vw;
+    text-align: center;
+  }
+  .right .content {
+    width: 100vw;
+    text-align: center;
+    transform: translate(-50vw);
+  }
+  span {
+    display: inline-block;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 10vw;
+    text-transform: uppercase;
+    line-height: .8;
+    transition: ease-out .6s;
+  }
+
+  
