--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
     display: inline-block;
   }
   .left {
-    color: darkred;
+    color: black;
     transform: skew(0deg, -15deg);
   }
   .right {
