--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: lightblue;
+    background: pink;
   }
   .line {
     width: 100vw;
